# financial-recon-risk-model

./: .dockerignore  .gitignore  Dockerfile.api  README.md  pyproject.toml  requirements.txt
apps/: __init__.py  api_app.py  streamlit_app.py
docs/: architecture_presentation.md  flow_visualization.md
scripts/: run_api.py  run_training.py
src/recon_risk/: __init__.py  api_runtime.py  app.py  artifacts.py  config.py  contracts.py  diagnostics.py  evaluation.py  ingestion.py  labeling.py  logging_utils.py  modeling.py  pipeline.py  preprocess.py  service.py  splitter.py
